<resources>
    <string name="app_name">ChatApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="please_create_your_new_password">Please create your new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>

</resources>